--- a/theme/cluny/templates/blocks/contentDetail/sousPage.html
+++ b/theme/cluny/templates/blocks/contentDetail/sousPage.html
@@ -1,8 +1,13 @@
 <a ng-if="block.code" ng-attr-name=" {{block.code | split:'/':1}}" ></a>
 
 <div ng-attr-id=" {{block.code | split:'/':1}}" >
+<!--    <header class="content {{block.code}}" style="width:100%;" ng-class="{'standard':blockConfig.displayMode=='title', 'parallax':blockConfig.displayMode=='parallax'}"
+                afkl-lazy-image="{{rubedo.imageUrl.getUrlByMediaId(blockConfig.imageFile ,{width:'768px',mode:'boxed'})}} 480w , {{rubedo.imageUrl.getUrlByMediaId(blockConfig.imageFile )}} 1500w"
+                afkl-lazy-image-options='{"background": true}'>
+            <div ng-if="blockConfig.pageTitle" ng-include="rubedo.blockTemplateResolver.getTemplate('richText',{ })" ng-init="blockConfig = {contentId:blockConfig.pageTitle}" class="text-article">
+        </header>-->
     <header class="parallax page" afkl-lazy-image-options='{"background": true}'
-                afkl-lazy-image="{{rubedo.imageUrl.getUrlByMediaId(fieldEntity['banner'],{height:'800px',mode:'boxed'})}} 768w, {{rubedo.imageUrl.getUrlByMediaId(fieldEntity['banner'] ,{height:'600px',mode:'boxed'})}} 972w, {{rubedo.imageUrl.getUrlByMediaId(fieldEntity['banner']  ,{width:'1920px',mode:'boxed'})}} 1650w">
+                afkl-lazy-image="{{rubedo.imageUrl.getUrlByMediaId(fieldEntity['banner'],{width:'768px',mode:'boxed'})}} 480w, {{rubedo.imageUrl.getUrlByMediaId(fieldEntity['banner'] )}} 1500w">
         <div class="container">
             <rubedo-field field= "{{contentDetailCtrl.getFieldByName('text')}}" ng-if="fieldEntity['text']"></rubedo-field>
         </div>
