--- a/theme/cluny/css/cluny.less
+++ b/theme/cluny/css/cluny.less
@@ -49,6 +49,12 @@ html,body{font-family: 'MyanmarText','Arimo', "Helvetica Neue",Helvetica,Arial,s
 @media screen and (min-width: @min_sm) {
 		li:hover>.dropdown-menu{display: block}
 }
+@media screen and (max-width: @min_xs) {
+		h2 {font-size:1.8em}
+		h2 {font-size:1.5em}
+		h3 {font-size:1.3em}
+		p{font-size:1.5em;}
+}
 .txt-grey{color:@txt_grey}
 h2.titre-block{
 	text-transform: uppercase;font-family: 'MyanmarText Bold';
@@ -286,7 +292,7 @@ header.parallax.page{
 				header.parallax.page{height: 65vh; line-height: 65vh;margin-bottom:50px;}
 }
 @media screen and (max-width: @min_xs){
-				header.parallax.page h1{text-transform: uppercase;font-size:2em;}
+				header.parallax.page h1{text-transform: uppercase;font-size:1.8em;}
 				header.parallax.page{height: 65vh; line-height: 65vh;margin-bottom:30px;}
 }
 
