--- a/theme/cluny/css/cluny.less
+++ b/theme/cluny/css/cluny.less
@@ -120,11 +120,13 @@ header.content{
 		line-height: 420px;
 		text-align: center;
 		a, a:hover{color: white; text-decoration: none; display: inline-block; padding: 3px 12px 0px; border: 2px solid white; border-radius: 18px; text-transform: uppercase}
-		h1{font-size: 3em;}
 		p{font-size: 1.2em}
 }
+@media screen and (min-width: @min_xs){
+				header.content h1{text-transform: uppercase;font-size:3em;}
+}
 @media screen and (max-width: @min_xs){
-				header.content.h1{text-transform: uppercase;font-size:2em;}
+				header.content h1{text-transform: uppercase;font-size:1.6em;}
 }
 .bethanien header.content.parallax{background-attachment: fixed;}
 header.content.full{height: 100vh; line-height: 100vh; img{max-width: 80%}h1{font-size:3em;text-transform: uppercase}p{font-size: 2em;};background-attachment: scroll; }
