--- a/theme/cluny/css/cluny.less
+++ b/theme/cluny/css/cluny.less
@@ -289,17 +289,17 @@ header.parallax>div{line-height: 1.6em; font-size: 1.2em;display: inline-block;t
 header.parallax.page{
 				background-attachment: scroll;
 				text-align: center;
-				margin-bottom:60px;
+				//margin-bottom:60px;
 	h1{text-transform: uppercase; font-size: 3em;}
 }
 @media screen and (max-width: @min_sm) and (min-width: @min_xs){
 				header.parallax.page h1{text-transform: uppercase; font-size:3em;}
-				header.parallax.page{height: 65vh; line-height: 65vh;margin-bottom:50px;}
+				header.parallax.page{height: 65vh; line-height: 65vh;}
 }
 @media screen and (max-width: @min_xs){
 				header.parallax.page h1{text-transform: uppercase;font-size:1.8em;}
-				header.parallax.page{height: 65vh; line-height: 65vh;margin-bottom:30px;}
+				header.parallax.page{height: 65vh; line-height: 65vh;}
 }
 
 /*SOUS-PAGE*/
-.page{margin-top:40px}
+//.page{margin-top:40px}
