--- a/theme/cluny/css/cluny.less
+++ b/theme/cluny/css/cluny.less
@@ -145,12 +145,12 @@ header.content.prop>div{text-align: center; vertical-align: middle; padding-bott
 .texte{
 		padding: 80px 15px;max-width: 860px;font-size: 1.1em; line-height:1.4em;margin: 0 auto;
 }
-.texte_page{
-		padding: 80px 15px;max-width: 860px;font-size: 1.1em; line-height:1.4em;margin: 0 auto;
-}
-@media screen and (max-width: @min_xs) {
-		.texte_page{padding: 30px 15px;}
-} 
+//.texte_page{
+//		padding: 80px 15px;max-width: 860px;font-size: 1.1em; line-height:1.4em;margin: 0 auto;
+//}
+//@media screen and (max-width: @min_xs) {
+//		.texte_page{padding: 30px 15px;}
+//} 
 
 iframe{width:100% !important}
 
