--- a/theme/cluny/templates/blocks/contentDetail/sousPage.html
+++ b/theme/cluny/templates/blocks/contentDetail/sousPage.html
@@ -13,7 +13,7 @@
         </div>
     </header>
 
-    <div class="row texte">
+    <div class="texte_page">
         <div class="container">
             <div class="col-sm-12">
                 <rubedo-field field= "{{contentDetailCtrl.getFieldByName('presentation')}}" ng-if="fieldEntity['presentation']" class="pres"></rubedo-field>
