--- a/theme/cluny/templates/blocks/contentDetail/sousPage.html
+++ b/theme/cluny/templates/blocks/contentDetail/sousPage.html
@@ -13,9 +13,9 @@
         </div>
     </header>
 
-    <div class="texte_page">
+    <div class="row">
         <div class="container">
-            <div class="col-sm-12">
+            <div class="col-sm-12 texte_page">
                 <rubedo-field field= "{{contentDetailCtrl.getFieldByName('presentation')}}" ng-if="fieldEntity['presentation']" class="pres"></rubedo-field>
             </div>
         </div>
