--- a/theme/cluny/templates/blocks/contentDetail/sousPage.html
+++ b/theme/cluny/templates/blocks/contentDetail/sousPage.html
@@ -15,7 +15,7 @@
 
     <div class="row">
         <div class="container">
-            <div class="col-sm-12 texte_page">
+            <div class="texte_page">
                 <rubedo-field field= "{{contentDetailCtrl.getFieldByName('presentation')}}" ng-if="fieldEntity['presentation']" class="pres"></rubedo-field>
             </div>
         </div>
