insérer drapeau CANA

--- a/theme/cana_org/templates/blocks/d3Script.html
+++ b/theme/cana_org/templates/blocks/d3Script.html
@@ -1,6 +1,19 @@
+<link
+    rel="stylesheet"
+    type="text/css"
+    href="//github.com/downloads/lafeber/world-flags-sprite/flags32.css"
+/>
+
+
 <div ng-controller="D3ScriptController as d3ScriptCtrl" class="paddingv">
     <img src="/theme/cte/img/loader.gif" ng-if="d3ScriptCtrl.loading">
     <div class="container ">
+        <ul class="f32">
+            <li class="flag ar">Argentina</li>
+            <li class="flag au">Australia</li>
+            <li class="flag at">Austria</li>
+           
+          </ul>
         <div class="button rouge hidden-xs" style="min-width: 50px;" data-toggle="modal" data-target="#countryListModal">
             <i class="fa fa-list" aria-hidden="true" ></i>
         </div>
