--- a/theme/cana_org/templates/blocks/d3Script.html
+++ b/theme/cana_org/templates/blocks/d3Script.html
@@ -44,7 +44,8 @@
                         <div class="col-sm-6  regions-list">
                             <h4>{{rubedo.translate("Block.Carte.Presence.Perm.Cana","Mission CANA avec présence permanente de la Communauté du Chemin Neuf")}}</h4>
                             <ul class="f32">
-                                <li ng-repeat="country in d3ScriptCtrl.countryList |  orderBy:'name'" ng-if="country.fillKey== 'present'" class="flag ar">
+                                <li ng-repeat="country in d3ScriptCtrl.countryList |  orderBy:'name'" ng-if="country.fillKey== 'present'">
+                                    <span class="flag AR"></span>
                                     <a ng-href="{{country['url']}}" target="_blank">{{country.name}}</a>
                                 </li>
                             </ul>
@@ -53,7 +54,7 @@
                             <h4>{{rubedo.translate("Block.Carte.Presence.Ponct.Cana","Mission CANA avec présence ponctuelle de la Communauté du Chemin Neuf")}}</h4>
                              <ul class="f32">
                                 <li ng-repeat="country in d3ScriptCtrl.countryList | orderBy:'name'"  ng-if="country.fillKey== 'active'">
-                                    <span class="flag ar"></span>
+                                    <span class="flag AR"></span>
                                     <a ng-href="{{country['url']}}" target="_blank">{{country.name}}</a>
                                 </li>
                             </ul>
