--- a/theme/cana_org/templates/blocks/d3Script.html
+++ b/theme/cana_org/templates/blocks/d3Script.html
@@ -8,12 +8,6 @@
 <div ng-controller="D3ScriptController as d3ScriptCtrl" class="paddingv">
     <img src="/theme/cte/img/loader.gif" ng-if="d3ScriptCtrl.loading">
     <div class="container ">
-        <ul class="f32">
-            <li class="flag ar">Argentina</li>
-            <li class="flag au">Australia</li>
-            <li class="flag at">Austria</li>
-           
-          </ul>
         <div class="button rouge hidden-xs" style="min-width: 50px;" data-toggle="modal" data-target="#countryListModal">
             <i class="fa fa-list" aria-hidden="true" ></i>
         </div>
@@ -21,15 +15,15 @@
     <ng-include src="d3ScriptCtrl.ccnMap" class="hidden-xs"></ng-include>
     <div class="visible-xs-block regions-list">
         <h3>{{rubedo.translate("Block.Carte.Presence.Perm.Cana","Mission CANA avec présence permanente de la Communauté du Chemin Neuf")}}</h3>
-        <ul>
+        <ul class="f32">
             <li ng-repeat="country in d3ScriptCtrl.countryList  | orderBy:'name'" ng-if="country.fillKey== 'present'">
-                <a ng-href="{{country['url']}}" target="_blank">{{country.name}}</a>
+                <a ng-href="{{country['url']}}" target="_blank"><span class="flag {{country['id_iso']}}"></span>{{country.name}}</a>
             </li>
         </ul>
         <h3>{{rubedo.translate("Block.Carte.Presence.Ponct.Cana","Mission CANA avec présence ponctuelle de la Communauté du Chemin Neuf")}}</h3>
-        <ul>
+        <ul class="f32">
             <li ng-repeat="country in d3ScriptCtrl.countryList  | orderBy:'name'"  ng-if="country.fillKey== 'active'">
-                <a ng-href="{{country['url']}}" target="_blank">{{country.name}}</a>
+                <a ng-href="{{country['url']}}" target="_blank"><span class="flag {{country['id_iso']}}"></span>{{country.name}}</a>
             </li>
         </ul>
     </div>
@@ -54,8 +48,8 @@
                             <h4>{{rubedo.translate("Block.Carte.Presence.Ponct.Cana","Mission CANA avec présence ponctuelle de la Communauté du Chemin Neuf")}}</h4>
                              <ul class="f32">
                                 <li ng-repeat="country in d3ScriptCtrl.countryList | orderBy:'name'"  ng-if="country.fillKey== 'active'">
-                                    <span class="flag {{country['id_iso']}}"></span>
-                                    <a ng-href="{{country['url']}}" target="_blank">{{country.name}}</a>
+                                    
+                                    <a ng-href="{{country['url']}}" target="_blank"><span class="flag {{country['id_iso']}}"></span>{{country.name}}</a>
                                 </li>
                             </ul>
                         </div>
