--- a/theme/cluny/templates/mails/reservationCLUNY.html
+++ b/theme/cluny/templates/mails/reservationCLUNY.html
@@ -37,17 +37,17 @@
       </thead>
       <tr style="border-bottom:1px solid grey">
           <td style="border-bottom:1px solid grey">Chambre simple</td>
-          <td style="border-bottom:1px solid grey">{ single } €/nuit</td>
+          <td style="border-bottom:1px solid grey">42 €/nuit</td>
           <td style="border-bottom:1px solid grey"> { rooms1 }</td>
-          <td style="border-bottom:1px solid grey">{ single_shower } €/nuit</td>
+          <td style="border-bottom:1px solid grey">50 €/nuit</td>
           <td style="border-bottom:1px solid grey"> { rooms1_shower }</td>
           <td style="border-bottom:1px solid grey">{ price1 }</td>
       </tr>
       <tr style="border-bottom:1px solid grey" >
           <td style="border-bottom:1px solid grey">Chambre double (couple)</td>
-          <td style="border-bottom:1px solid grey">{ double } €/nuit</td>
+          <td style="border-bottom:1px solid grey">72 €/nuit</td>
           <td style="border-bottom:1px solid grey">{ rooms2 }</td>
-          <td style="border-bottom:1px solid grey">{ double_shower } €/nuit</td>
+          <td style="border-bottom:1px solid grey">88 €/nuit</td>
           <td style="border-bottom:1px solid grey">{ rooms2_shower }</td>
           <td style="border-bottom:1px solid grey">{ price2 }</td>
       </tr>
@@ -55,21 +55,21 @@
           <td style="border-bottom:1px solid grey">Chambre triple</td>
           <td style="border-bottom:1px solid grey"></td>
           <td style="border-bottom:1px solid grey"></td>
-          <td style="border-bottom:1px solid grey">{ triple_shower } €/nuit</td>
+          <td style="border-bottom:1px solid grey">120 €/nuit</td>
           <td style="border-bottom:1px solid grey">{ rooms3_shower }</td>
           <td style="border-bottom:1px solid grey">{ price3 }</td>
       </tr>
       <tr style="border-bottom:1px solid grey">
           <td style="border-bottom:1px solid grey">Chambre quadruple</td>
-          <td style="border-bottom:1px solid grey">{ quadruple_shower } €/nuit</td>
+          <td style="border-bottom:1px solid grey">120 €/nuit</td>
           <td style="border-bottom:1px solid grey">{ rooms4 }</td>
-          <td style="border-bottom:1px solid grey">{ quadruple_shower } €/nuit</td>
+          <td style="border-bottom:1px solid grey">128 €/nuit</td>
           <td style="border-bottom:1px solid grey"> { rooms4_shower }</td>
           <td style="border-bottom:1px solid grey">{ price4 }</td>
       </tr>
       <tr style="border-bottom:1px solid grey">
           <td style="border-bottom:1px solid grey">Chambres pour les groupes de jeunes</td>
-          <td style="border-bottom:1px solid grey">{ group_young_adults } €/nuit</td>
+          <td style="border-bottom:1px solid grey">30 €/nuit</td>
           <td style="border-bottom:1px solid grey">{ rooms5 }</td>
           <td colspan="2" style="border-bottom:1px solid grey; font-style: italic;">Nombre de personnes</td>
           <td style="border-bottom:1px solid grey">{ price5 }</td>
@@ -84,7 +84,7 @@
   
   </table>
   <p>Commentaires<br/>
-  { remarks }</p>
+  { message }</p>
   <p><b>Total :</b> { total } €<br></p>
   <p><em>
     * les enfants de moins de 10 ans en sont exempts<br/>
